# ffi

./: Cargo.toml  deny.toml
algo/: Cargo.toml
algo/src/: algo.rs  matrix.rs  vector.rs
node-binding/: Cargo.toml  index.d.ts
node-binding/src/: algo.rs  lib.rs  matrix.rs
python-binding/: Cargo.toml  README.md  pyproject.toml
python-binding/src/: hasher.rs  lib.rs
