[package]
edition = "2021"
name    = "node-binding"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
algo.workspace = true
napi           = { version = "2", no-default-features = true, features = ["full"] }
napi-derive    = "2"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"

[build-dependencies]
napi-build = "2"
